aviatickets-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aviatickets
  labels:
    name: aviatickets
