aviatickets-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aviatickets-app
  namespace: aviatickets
spec:
  replicas: 3
  selector:
    matchLabels:
      app: aviatickets-app
  template:
    metadata:
      labels:
        app: aviatickets-app
    spec:
      containers:
        - name: aviatickets-app
          image: vadimstepuro/aviatickets:0.0.2
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: aviatickets-app-service
  namespace: aviatickets
spec:
  type: NodePort
  selector:
    app: aviatickets-app
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8080
      nodePort: 30001
