aviatickets-pgpool-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: aviatickets-pgpool-service
  namespace: aviatickets
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: order-pgpool
      port: 5432
      targetPort: 5432
      protocol: TCP
      nodePort: null
  selector:
    app: aviatickets-pgpool
---
apiVersion: v1
kind: Service
metadata:
  name: aviatickets-pgpool-nodeport
  namespace: aviatickets
spec:
  type: NodePort
  sessionAffinity: None
  ports:
    - name: order-pgpool
      port: 5432
      nodePort: 30010
      targetPort: order-pgpool
      protocol: TCP
  selector:
    app: aviatickets-pgpool
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aviatickets-pgpool-deployment
  namespace: aviatickets
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aviatickets-pgpool
  template:
    metadata:
      labels:
        app: aviatickets-pgpool
    spec:
      securityContext:
        fsGroup: 1001
      containers:
        - name: aviatickets-pgpool
          image: docker.io/bitnami/pgpool:4.5.1-debian-12-r0
          imagePullPolicy: "IfNotPresent"
          securityContext:
            runAsUser: 1001
          ports:
            - name: order-pgpool
              containerPort: 5432
              protocol: TCP
          livenessProbe:
            exec:
              command:
                - /opt/bitnami/scripts/pgpool/healthcheck.sh
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          readinessProbe:
            exec:
              command:
                - bash
                - -ec
                - PGPASSWORD=${PGPOOL_POSTGRES_PASSWORD} psql -U ${PGPOOL_POSTGRES_USERNAME} -d "postgres" -h /opt/bitnami/pgpool/tmp -tA -c "SELECT 1" >/dev/null
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
