aviatickets-replicable-db-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: aviatickets-db-headless-service
  namespace: aviatickets
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: order-db-cont
      port: 5432
      targetPort: order-db-cont
      protocol: TCP
  selector:
    app: aviatickets-db
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: aviatickets-replicable-db
  namespace: aviatickets
spec:
  podManagementPolicy: Parallel
  serviceName: aviatickets-db-headless-service
  replicas: 3
  selector:
    matchLabels:
      app: aviatickets-db
  template:
    metadata:
      labels:
        app: aviatickets-db
    spec:
      securityContext:
        fsGroup: 1001
      containers:
        - name: order-db-cont
          lifecycle:
            preStop:
              exec:
                command:
                  - /pre-stop.sh
          image: docker.io/bitnami/postgresql-repmgr:16.2.0-debian-12-r5
          imagePullPolicy: "IfNotPresent"
          securityContext:
            runAsUser: 1001
          # Auxiliary vars to populate environment variables
          ports:
            - name: postgresql
              containerPort: 5432
              protocol: TCP
          livenessProbe:
            exec:
              command:
                - bash
                - -ec
                - 'PGPASSWORD=$POSTGRES_PASSWORD psql -w -U $POSTGRES_USER -d "postgres"  -h 127.0.0.1 -c "SELECT 1"'
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          readinessProbe:
            exec:
              command:
                - bash
                - -ec
                - 'PGPASSWORD=$POSTGRES_PASSWORD psql -w -U $POSTGRES_USER -d "postgres"  -h 127.0.0.1 -c "SELECT 1"'
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          volumeMounts:
            - name: data
              mountPath: /bitnami/postgresql
            - name: hooks-scripts
              mountPath: /pre-stop.sh
              subPath: pre-stop.sh
      volumes:
        - name: hooks-scripts
          configMap:
            name: aviatickets-db-configmap
            defaultMode: 0755
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "1Gi"
