redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-server
  namespace: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-server
  template:
    metadata:
      labels:
        app: redis-server
    spec:
      containers:
        - name: redis-server
          image: redis:7.2.4
          args: ["--appendonly", "yes", "--requirepass", "$(REDIS_PASS)"]
          ports:
            - name: redis-server
              containerPort: 6379
          volumeMounts:
            - name: lv-storage
              mountPath: /data
      volumes:
        - name: lv-storage
          persistentVolumeClaim:
            claimName: redis-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: redis
spec:
  selector:
    app: redis-server
  ports:
    - name: redis-port
      protocol: TCP
      port: 6379
      targetPort: 6379
